// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Stage Template Page With Standards - Should render with a project 1`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <div
      className="contentContainer"
    >
      <div
        className="page-title"
      >
        <h1>
          Project Construction
        </h1>
        <span>
          You have appointed a Principal contractor (PC).  The PC has full responsibility for Health and Safety during this step.  The PC will provide a Construction Phase Plan (CPP).
        </span>
      </div>
      <div
        className="standardsContainer"
      >
        <withRouter(Connect(StandardMapper))
          fields={
            Array [
              Object {
                "default": true,
                "description": "A construction phase plan is a document required under CDM. It is required on all construction projects and is used to plan and manage the construction works in a safe manner.",
                "editable": true,
                "fileDetails": Array [],
                "id": "1",
                "title": "Please upload your Construction Phase Plan (CPP)",
                "type": "file",
              },
              Object {
                "default": true,
                "description": "Meeting records should be uploaded for the project record to allow all parties to stay informed about progress on the project.",
                "editable": true,
                "fileDetails": Array [],
                "id": "2",
                "title": "Please upload your Monthly Progress report",
                "type": "file",
              },
            ]
          }
          id="TestStandardId"
          key="0"
          name="Test Standard"
          pageName="construction"
          projectId="123"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should render with a project then change project 1`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <div
      className="contentContainer"
    >
      <div
        className="page-title"
      >
        <h1>
          Project Construction
        </h1>
        <span>
          You have appointed a Principal contractor (PC).  The PC has full responsibility for Health and Safety during this step.  The PC will provide a Construction Phase Plan (CPP).
        </span>
      </div>
      <div
        className="standardsContainer"
      >
        <withRouter(Connect(StandardMapper))
          fields={
            Array [
              Object {
                "default": true,
                "description": "A construction phase plan is a document required under CDM. It is required on all construction projects and is used to plan and manage the construction works in a safe manner.",
                "editable": true,
                "fileDetails": Array [],
                "id": "1",
                "title": "Please upload your Construction Phase Plan (CPP)",
                "type": "file",
              },
              Object {
                "default": true,
                "description": "Meeting records should be uploaded for the project record to allow all parties to stay informed about progress on the project.",
                "editable": true,
                "fileDetails": Array [],
                "id": "2",
                "title": "Please upload your Monthly Progress report",
                "type": "file",
              },
            ]
          }
          id="TestStandardId"
          key="0"
          name="Test Standard"
          pageName="construction"
          projectId="123"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should render with a project then change project 2`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <div
      className="contentContainer"
    >
      <div
        className="page-title"
      >
        <h1>
          Project Construction
        </h1>
        <span>
          You have appointed a Principal contractor (PC).  The PC has full responsibility for Health and Safety during this step.  The PC will provide a Construction Phase Plan (CPP).
        </span>
      </div>
      <div
        className="standardsContainer"
      >
        <withRouter(Connect(StandardMapper))
          fields={
            Array [
              Object {
                "default": true,
                "description": "A construction phase plan is a document required under CDM. It is required on all construction projects and is used to plan and manage the construction works in a safe manner.",
                "editable": true,
                "fileDetails": Array [],
                "id": "1",
                "title": "Please upload your Construction Phase Plan (CPP)",
                "type": "file",
              },
              Object {
                "default": true,
                "description": "Meeting records should be uploaded for the project record to allow all parties to stay informed about progress on the project.",
                "editable": true,
                "fileDetails": Array [],
                "id": "2",
                "title": "Please upload your Monthly Progress report",
                "type": "file",
              },
            ]
          }
          id="TestStandardId"
          key="0"
          name="Test Standard"
          pageName="construction"
          projectId="456"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should render with a project then change project to no project 1`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <div
      className="contentContainer"
    >
      <div
        className="page-title"
      >
        <h1>
          Project Construction
        </h1>
        <span>
          You have appointed a Principal contractor (PC).  The PC has full responsibility for Health and Safety during this step.  The PC will provide a Construction Phase Plan (CPP).
        </span>
      </div>
      <div
        className="standardsContainer"
      >
        <withRouter(Connect(StandardMapper))
          fields={
            Array [
              Object {
                "default": true,
                "description": "A construction phase plan is a document required under CDM. It is required on all construction projects and is used to plan and manage the construction works in a safe manner.",
                "editable": true,
                "fileDetails": Array [],
                "id": "1",
                "title": "Please upload your Construction Phase Plan (CPP)",
                "type": "file",
              },
              Object {
                "default": true,
                "description": "Meeting records should be uploaded for the project record to allow all parties to stay informed about progress on the project.",
                "editable": true,
                "fileDetails": Array [],
                "id": "2",
                "title": "Please upload your Monthly Progress report",
                "type": "file",
              },
            ]
          }
          id="TestStandardId"
          key="0"
          name="Test Standard"
          pageName="construction"
          projectId="123"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should render with a project then change project to no project 2`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <NoProjectSelected />
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should render with a project then change stage 1`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <div
      className="contentContainer"
    >
      <div
        className="page-title"
      >
        <h1>
          Project Construction
        </h1>
        <span>
          You have appointed a Principal contractor (PC).  The PC has full responsibility for Health and Safety during this step.  The PC will provide a Construction Phase Plan (CPP).
        </span>
      </div>
      <div
        className="standardsContainer"
      >
        <withRouter(Connect(StandardMapper))
          fields={
            Array [
              Object {
                "default": true,
                "description": "A construction phase plan is a document required under CDM. It is required on all construction projects and is used to plan and manage the construction works in a safe manner.",
                "editable": true,
                "fileDetails": Array [],
                "id": "1",
                "title": "Please upload your Construction Phase Plan (CPP)",
                "type": "file",
              },
              Object {
                "default": true,
                "description": "Meeting records should be uploaded for the project record to allow all parties to stay informed about progress on the project.",
                "editable": true,
                "fileDetails": Array [],
                "id": "2",
                "title": "Please upload your Monthly Progress report",
                "type": "file",
              },
            ]
          }
          id="TestStandardId"
          key="0"
          name="Test Standard"
          pageName="construction"
          projectId="123"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should render with a project then change stage 2`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <div
      className="contentContainer"
    >
      <div
        className="page-title"
      >
        <h1>
          Project Design
        </h1>
        <span>
          The appointed design team will be collectively identifying hazards and considering mitagations for potential risks.  The assessment of risks will be complied into a single Design Risk Register.
        </span>
      </div>
      <div
        className="standardsContainer"
      >
        <withRouter(Connect(StandardMapper))
          fields={
            Array [
              Object {
                "default": true,
                "description": "This document is required before any design work can start.",
                "editable": true,
                "fileDetails": Array [],
                "id": "1",
                "title": "Please Upload your Design Risk Assessment (DRA)",
                "type": "file",
              },
            ]
          }
          id="UpdatedTestStandard"
          key="0"
          name="Updated Test Standard"
          pageName="design"
          projectId="123"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should render with no project 1`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <NoProjectSelected />
  </div>
</div>
`;

exports[`Project Stage Template Page With Standards - Should show error fetching page content 1`] = `
<div
  id="stage-page"
>
  <div
    className="page-content-section"
  >
    <ErrorFetchingContent />
  </div>
</div>
`;
